# docs/swagger.json
@@ -1790,6 +1790,21 @@
                 }
             }
         },
+        "/service/member/bootcamp-list": {
+            "post": {
+                "responses": {}
+            }
+        },
+        "/service/member/community-list": {
+            "post": {
+                "responses": {}
+            }
+        },
+        "/service/member/contest-list": {
+            "post": {
+                "responses": {}
+            }
+        },
         "/service/member/contract-list": {
             "post": {
                 "description": "会员合同列表 Description",
